@@ -1,0 +1,69 @@
+/*
+ * Copyright (C) ExBin Project
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.exbin.bined.intellij;
+
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.fileChooser.FileChooser;
+import com.intellij.openapi.fileChooser.FileChooserDescriptor;
+import com.intellij.openapi.project.DumbAware;
+import com.intellij.openapi.project.Project;
+import com.intellij.openapi.project.ProjectManager;
+import com.intellij.openapi.vfs.VirtualFile;
+import org.exbin.framework.utils.ActionUtils;
+
+import javax.annotation.ParametersAreNonnullByDefault;
+
+/**
+ * Open file in binary editor action.
+ *
+ * @author ExBin Project (https://exbin.org)
+ */
+@ParametersAreNonnullByDefault
+public class FileMenuOpenAsBinaryAction extends AnAction implements DumbAware {
+
+    private boolean actionVisible = true;
+
+    public FileMenuOpenAsBinaryAction() {
+        super("Open As Binary" + ActionUtils.DIALOG_MENUITEM_EXT);
+    }
+
+    @Override
+    public void update(AnActionEvent event) {
+        super.update(event);
+        event.getPresentation().setEnabledAndVisible(actionVisible);
+    }
+
+    @Override
+    public void actionPerformed(AnActionEvent event) {
+        Project project = event.getProject();
+        if (project == null) {
+            project = ProjectManager.getInstance().getDefaultProject();
+        }
+
+        FileChooserDescriptor chooserDescriptor = new FileChooserDescriptor(true, false, true, false, false, false);
+        VirtualFile virtualFile = FileChooser.chooseFile(chooserDescriptor, project, null);
+        if (virtualFile == null) {
+            return;
+        }
+
+        OpenFileAsBinaryAction.openVirtualFileAsBinary(project, virtualFile);
+    }
+
+    public void setActionVisible(boolean actionVisible) {
+        this.actionVisible = actionVisible;
+    }
+}
